--- a/app/assets/stylesheets/pages/plans.css
+++ b/app/assets/stylesheets/pages/plans.css
@@ -30,6 +30,14 @@
   line-height: 1.6;
 }
 
+.form-note {
+  display: block;
+  margin-top: 8px;
+  font-size: 0.85rem;
+  color: #666;
+}
+
+
 /* ===============================
    Content
 ================================ */
