--- a/app/views/plans/_step_list.html.erb
+++ b/app/views/plans/_step_list.html.erb
@@ -38,7 +38,7 @@
                 <%= link_to "削除",
                   plan_plan_step_path(@plan, step),
                   method: :delete,
-                  data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" },
+                  data: { turbo_method: :delete, turbo_confirm: "この行動ステップを削除しますか？" },
                   class: "tertiary-button is-danger" %>
               </div>
             <% end %>
