微修正（戻るボタン追加・文言統一）

--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -79,8 +79,15 @@
 
     <!-- Actions -->
     <div class="diagnosis-actions">
-      <%= f.submit "診断する", class: "primary-button" %>
+      <div class="action-item">
+        <%= f.submit "おすすめの流れを作る", class: "primary-button" %>
+      </div>
+
+      <div class="action-item" style="margin-top: 8px;">
+        <%= link_to "戻る", plan_path(@plan), class: "tertiary-button" %>
+      </div>
     </div>
+    
 
   <% end %>
 </div>
