--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,44 @@
-<h2>Sign up</h2>
+<div class="devise-page">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <header class="devise-hero">
+    <h1 class="devise-title">アカウント作成</h1>
+    <p class="devise-lead">
+      ニックネーム・メールアドレス・パスワードを入力してアカウントを作成してください。
+    </p>
+  </header>
 
-  <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autofocus: true %>
-  </div>
+  <main class="devise-form-card">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="devise-form-group">
+        <%= f.label :nickname, "ニックネーム" %>
+        <%= f.text_field :nickname, autofocus: true, class: "devise-form-input", required: true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="devise-form-group">
+        <%= f.label :email, "メールアドレス" %>
+        <%= f.email_field :email, class: "devise-form-input", required: true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="devise-form-group">
+        <%= f.label :password, "パスワード" %>
+        <%= f.password_field :password, class: "devise-form-input", required: true, autocomplete: "new-password" %>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="devise-form-group">
+        <%= f.label :password_confirmation, "パスワード確認" %>
+        <%= f.password_field :password_confirmation, class: "devise-form-input", required: true %>
+      </div>
 
-<%= render "devise/shared/links" %>
+      <div class="devise-form-actions">
+        <%= f.submit "アカウント作成", class: "devise-primary-button" %>
+      </div>
+
+    <% end %>
+
+    <div class="devise-form-actions">
+      <%= link_to "ログインはこちら", new_session_path(resource_name), class: "devise-secondary-button" %>
+    </div>
+
+  </main>
+</div>
