トップページにリリース後の修正告知を追加

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -14,6 +14,21 @@
     </div>
   </header>
 
+  <section class="top-notice">
+    <div class="top-notice-inner">
+      <h3 class="notice-title">お知らせ</h3>
+      <ul class="notice-list">
+        <li class="notice-item">
+          <span class="notice-date">2026/01/12</span>
+          <span class="notice-text">
+            おすすめの流れ作成時に、DPAショーが表示されない不具合を修正しました。
+          </span>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+
   <div class="top-links">
     <%= link_to "FunFlowについて", about_path, class: "tertiary-button" %>
   </div>
