--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -24,6 +24,12 @@
             おすすめの流れ作成時に、DPAショーが表示されない不具合を修正しました。
           </span>
         </li>
+        <li class="notice-item">
+          <span class="notice-date">2026/01/15</span>
+          <span class="notice-text">
+            作成したプランをコピーし、メモや共有に使える機能を追加しました。
+          </span>
+        </li>
       </ul>
     </div>
   </section>
